fix notification card not visible

--- a/client/src/components/NotificationComponents/NotificationCard.module.css
+++ b/client/src/components/NotificationComponents/NotificationCard.module.css
@@ -2,7 +2,8 @@
   display: flex;
   align-items: center;
   position: relative;
-  background-color: rgba(255, 255, 255, 0.34);
+  background-color: rgba(255, 255, 255, 0.44);
+  backdrop-filter: blur(5px);
   padding: 1rem;
   padding-right: 0.5rem;
   margin-bottom: 0.5rem;
